# ramalama

./: .codespelldict  .codespellrc  .flake8  .gitignore  .packit-copr-rpm.sh  .packit.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  OWNERS  README.md  Roadmap.md  SECURITY  SECURITY.md  TODO.md  ci.sh  container_build.sh  flake.nix  generate-containerfiles.sh  hf-db.txt  index.html  install-uv.sh  install.py  install.sh  mm-demo.sh  modelfile-parser.cpp  multi-arch-targets.list  podman-build.sh  podman-llm  pyproject.toml  pytest.ini  ramalama  ramalama-ls.1  ramalama.py  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/scripts/: install-ollama.sh
.github/workflows/: approve-command.yml  build-macos-installer.yml  ci-images.yml  ci.yml  docsite-publish.yml  install_ramalama.yml  latest.yml  nightly.yml  pypi.yml  stale.yml  windows-e2e.yml
.tekton/: bats-pull-request.yaml  bats-push.yaml  cuda-llama-server-pull-request.yaml  cuda-llama-server-push.yaml  cuda-pull-request.yaml  cuda-push.yaml  cuda-rag-pull-request.yaml  cuda-rag-push.yaml  cuda-whisper-server-pull-request.yaml  cuda-whisper-server-push.yaml  ramalama-llama-server-pull-request.yaml  ramalama-llama-server-push.yaml  ramalama-pull-request.yaml  ramalama-push.yaml  ramalama-rag-pull-request.yaml  ramalama-rag-push.yaml  ramalama-whisper-server-pull-request.yaml  ramalama-whisper-server-push.yaml  rocm-llama-server-pull-request.yaml  rocm-llama-server-push.yaml  rocm-pull-request.yaml  rocm-push.yaml  rocm-rag-pull-request.yaml  rocm-rag-push.yaml  rocm-ubi-llama-server-pull-request.yaml  rocm-ubi-llama-server-push.yaml  rocm-ubi-pull-request.yaml  rocm-ubi-push.yaml  rocm-ubi-rag-pull-request.yaml  rocm-ubi-rag-push.yaml  rocm-ubi-whisper-server-pull-request.yaml  rocm-ubi-whisper-server-push.yaml  rocm-whisper-server-pull-request.yaml  rocm-whisper-server-push.yaml
.tekton/asahi/: asahi-pull-request.yaml  asahi-push.yaml
.tekton/asahi-llama-server/: asahi-llama-server-pull-request.yaml  asahi-llama-server-push.yaml
.tekton/asahi-rag/: asahi-rag-pull-request.yaml  asahi-rag-push.yaml
.tekton/asahi-whisper-server/: asahi-whisper-server-pull-request.yaml  asahi-whisper-server-push.yaml
.tekton/bats/: bats-pull-request.yaml  bats-push.yaml
.tekton/cann/: cann-pull-request.yaml  cann-push.yaml
.tekton/cann-llama-server/: cann-llama-server-pull-request.yaml  cann-llama-server-push.yaml
.tekton/cann-rag/: cann-rag-pull-request.yaml  cann-rag-push.yaml
.tekton/cann-whisper-server/: cann-whisper-server-pull-request.yaml  cann-whisper-server-push.yaml
.tekton/cuda-llama-server/: cuda-llama-server-pull-request.yaml  cuda-llama-server-push.yaml
.tekton/cuda-rag/: cuda-rag-pull-request.yaml  cuda-rag-push.yaml
.tekton/cuda-tools/: cuda-tools-pull-request.yaml  cuda-tools-push.yaml
.tekton/cuda-vllm-llama-server/: cuda-vllm-llama-server-pull-request.yaml  cuda-vllm-llama-server-push.yaml
.tekton/cuda-vllm-rag/: cuda-vllm-rag-pull-request.yaml  (+1 more)
Development/: Containerfile  dev_environment.sh
base-container-image/: Containerfile
container-images/: build_llama_and_whisper.sh
docs/: .gitignore  MACOS_INSTALL.md  Makefile  README-macOS.md  README.md  ramalama-agent.1.md  ramalama-bench.1.md  ramalama-bench.1.md.in  ramalama-benchmarks.1.md  ramalama-cann.7.md  ramalama-chat.1.md  ramalama-client.1.md  ramalama-containers.1.md  ramalama-convert.1.md  ramalama-cuda.7.md  ramalama-daemon.1.md  ramalama-export.1.md  ramalama-import.1.md  ramalama-info.1.md  ramalama-inspect.1.md  ramalama-list.1.md  ramalama-login.1.md  ramalama-logout.1.md  ramalama-macos.7.md  ramalama-models.1.md  ramalama-musa.7.md  ramalama-oci.5.md  ramalama-perplexity.1.md  ramalama-perplexity.1.md.in  ramalama-pull.1.md  ramalama-push.1.md  ramalama-rag.1.md  ramalama-rm.1.md  ramalama-run.1.md  ramalama-run.1.md.in  ramalama-sandbox-goose.1.md  ramalama-sandbox-goose.1.md.in  ramalama-sandbox-openclaw.1.md  ramalama-sandbox-opencode.1.md  ramalama-sandbox-opencode.1.md.in  (+10 more)
docsite/: Makefile  convert_manpages.py  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
hack/: man-page-checker  markdown-preprocess  rm.sh  sort-shortnames-conf.py  tree_status.sh  xref-helpmsgs-manpages
hf-db/: granite:3b  merlinite  mistral
libexec/: ramalama-client-core  ramalama-run-core  ramalama-serve-core
plans/: main.fmf  no-rpm.fmf  rpm.fmf
rag_framework/: rag_framework.py
ramalama/: __init__.py  accel.py  agent.py  amdkfd.py  annotations.py  api_provider_specs.py  arg_types.py  chat.py  chat_api_llama_server.py  chat_utils.py  cli.py  cli_arg_normalization.py  client-core.py  common.py  compat.py  compose.py  config.py  config_types.py  console.py  daemon_stub.py  endian.py  engine.py  file.py  gguf_parser.py  go2jinja.py  gpu_detector.py  hardware.py  hf_style_repo_base.py  host_utils.py  http_client.py  huggingface.py  hw_detect.py  image_compat.py  image_selector.py  kserve.py  kube.py  layered_config.py  log_levels.py  logger.py  migrate.py  (+34 more)
ramalama-sdk/: README.md
ramalama-sdk/sdk/ramalama-python/: Makefile  README.md  mkdocs.yml  pyproject.toml
ramalama-sdk/sdk/ramalama-python/docs/: api.md  index.md
ramalama-sdk/sdk/ramalama-python/examples/: basic_chat.py
ramalama-sdk/sdk/ramalama-python/src/ramalama_sdk/: __init__.py  errors.py  main.py  schemas.py  utils.py
ramalama-sdk/sdk/ramalama-python/tests/: test_ramalama_model.py
ramalama-sdk/sdk/ramalama-python/tests/e2e/: conftest.py  test_model_integration.py
restapi/: README.md  api.py
rpm/: python-ramalama.spec  ramalama.spec  update-spec-version.sh
rpm-next/: ramalama.spec
scripts/: build_macos_pkg.sh  newver.sh  release-image.sh  release.sh  replace-shas.sh
shortnames/: shortnames.conf
test/: ci.sh  conftest.py  report.md
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+677 files in other folders)
