[metadata]
name = ramalama
description = RamaLama is a command line tool for working with AI LLM models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/containers/ramalama
platforms = any
project_urls =
    Bug Tracker = https://github.com/containers/ramalama/issues
keywords = ramalama

[options]
include_package_data = True

[bdist_wheel]
# python < 3.8 not supported
universal = false

[sdist]
formats = gztar
